--- a/sign.css
+++ b/sign.css
@@ -13,7 +13,7 @@ main>div{
 
 main>div>form>input{
 margin: 10px;
-padding: 8px;
+padding: 9px;
 border-radius: 8px;
 border: 1px solid rgb(236, 229, 229);
 }
@@ -24,4 +24,13 @@ color: grey;
     background-color: #0884cc;
     color: white;
     font-size: 14px;
+}
+@media screen and (max-width:700px){
+    main>div{
+        border-radius: 0px;
+    }
+    main>div>form>input{
+        border-radius: 6px;
+        padding: 10px;
+    }
 }
