--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,7 +55,7 @@ body h2{
     display: none;
     float: right;
     margin-right: 40px;
-    margin-top: 15px;
+    margin-top: 6px;
   }
   
   .bar1, .bar2, .bar3 {
@@ -279,6 +279,7 @@ color:#0e5491
 
 .image-container img {
   width: 100%;
+  height: 200px;
   display: block;
   transition: transform 0.3s ease-out;
 }
@@ -400,7 +401,9 @@ font-size: 15px;
   #intro>div>img{
     margin-top: 0;
    }
-
+#intro{
+  border-top: 1px solid #ece9e9;
+}
   #lastDiv>h2{
     font-size: 30px;
     font-weight: 900;
@@ -576,13 +579,15 @@ position: relative;
 
 .flag {
   width: 200px;
-  height: 100px;
+  height: 150px;
   display: inline-block;
   margin-right: 3%;
+ box-shadow: 3px 3px 10px grey;
+  border-radius: 8px;
 }
 
 #flagger {
-  background-color: #fff;
+ background-color: rgb(221, 217, 217);
 }
 
 #intro>div>video{
@@ -625,11 +630,9 @@ background-color: #0e5491;
   #none{
     display: none;
   }
-  #intro>div>video{
-    height: 500px;
-    width: 100%;
-    margin-top: -70px;
-   }
+ #vida{
+  background-color: #000000;
+ }
   #footDivs{
     flex-direction: column;
   }
@@ -650,9 +653,10 @@ background-color: #0e5491;
 
 .flag {
   width: 100px;
-  height: 50px;
+  height: 100px;
   display: inline-block;
   margin-right: 2%;
+  border-radius: 0;
 }
 
 }
